fix: inconsistent wrapping view on the overlay. Should display properly now

--- a/backend/static/css/main.css
+++ b/backend/static/css/main.css
@@ -349,7 +349,6 @@
    pointer-events: none;
    display: flex;
    justify-content: center;
-   white-space: nowrap;
  }
 
  .overlay-text {
